apt (0.8.16~exp14) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * apt-pkg/packagemanager.cc:
    - fix inconsistent clog/cout usage in the debug output
  
  [ David Kalnischkies ]
  * apt-pkg/packagemanager.cc:
    - recheck all dependencies if we changed a package in SmartConfigure
      as this could break an earlier dependency (LP: #940396)
    - recheck dependencies in SmartUnpack after a change, too

 -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 13 Mar 2012 12:38:35 +0100

apt (0.8.16~exp13) experimental; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/acquire-item.cc:
    - remove 'old' InRelease file if we can't get a new one before
      proceeding with Release.gpg to avoid the false impression of a still
      trusted repository by a (still present) old InRelease file.
      Thanks to Simon Ruderich for reporting this issue! (CVE-2012-0214)
    - add Debug::pkgAcqArchive::NoQueue to disable package downloading
  * apt-pkg/deb/dpkgpm.cc:
    - chroot if needed before dpkg --assert-multi-arch
    - ensure that dpkg binary doesn't have the chroot-directory prefixed
    - call dpkg --assert-multi-arch with execvp instead of execv
    - save the universe by not printing messages about apport if a package
      with this name is not installed (Closes: #619646)
    - handle a SIGINT in all modes as a break after the currently running
      dpkg transaction instead of ignoring it completely
  * apt-pkg/depcache.cc:
    - if a M-A:same package is marked for reinstall, mark all it's installed
      silbings for reinstallation as well (LP: #859188)
  * apt-pkg/contrib/configuration.cc:
    - do not stop parent transversal in FindDir if the value is empty
  * methods/http{s,}.cc:
    - if a file without an extension is requested send an 'Accept: text/*'
      header to avoid that the server chooses unsupported compressed files
      in a content-negotation attempt (Closes: #657560)
    - remove the arbitrary MAXLEN limit for response lines (Closes: #658346)