@@ -872,7 +872,23 @@ bool pkgAcquireStatus::Pulse(pkgAcquire *Owner)
 	     << ":"  << (CurrentBytes/float(TotalBytes)*100.0) 
 	     << ":" << msg 
 	     << endl;
-      write(fd, status.str().c_str(), status.str().size());
+
+      std::string const dlstatus = status.str();
+      size_t done = 0;
+      size_t todo = dlstatus.size();
+      errno = 0;
+      int res = 0;
+      do
+      {
+	 res = write(fd, dlstatus.c_str() + done, todo);
+	 if (res < 0 && errno == EINTR)
+	    continue;
+	 if (res < 0)
+	    break;
+	 done += res;
+	 todo -= res;
+      }
+      while (res > 0 && todo > 0);
    }
 
    return true;
